# RemoteMinibot

./: .gitignore
catkin_ws/: .gitignore
catkin_ws/src/: .gitignore
catkin_ws/src/hardware/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/hardware/arduino_firmware/: .gitignore  Makefile  minibot_firmware.ino  minibot_startup.ino
catkin_ws/src/hardware/esp32_firmware/: .gitignore
catkin_ws/src/hardware/esp32_firmware/Programs/: .gitignore
catkin_ws/src/hardware/esp32_firmware/Programs/Blink/: Blink.ino
catkin_ws/src/hardware/esp32_firmware/Programs/Blink2/: Blink2.ino
catkin_ws/src/hardware/esp32_firmware/Programs/Encoders/: Encoders.ino
catkin_ws/src/hardware/esp32_firmware/Programs/MinibotFirmware/: MinibotFirmware.ino
catkin_ws/src/hardware/esp32_firmware/Programs/Motors/: .gitignore  Motors.ino
catkin_ws/src/hardware/esp32_firmware/Programs/PID/: PID.ino
catkin_ws/src/hardware/esp32_firmware/Programs/ROS/: ROS.ino
catkin_ws/src/hardware/esp32_firmware/Programs/Sensors/: Sensors.ino
catkin_ws/src/hardware/esp32_firmware/libraries/: .gitignore
catkin_ws/src/hardware/esp32_firmware/libraries/Blink/: library.properties
catkin_ws/src/hardware/esp32_firmware/libraries/Blink/src/: Blink.cpp
catkin_ws/src/hardware/esp32_firmware/libraries/Encoders/: library.properties
catkin_ws/src/hardware/esp32_firmware/libraries/Encoders/src/: Encoders.cpp  Encoders.h
catkin_ws/src/hardware/esp32_firmware/libraries/Motors/: .gitignore  library.properties
catkin_ws/src/hardware/esp32_firmware/libraries/Motors/src/: Motors.cpp
catkin_ws/src/hardware/esp32_firmware/libraries/Sensors/: library.properties
catkin_ws/src/hardware/esp32_firmware/libraries/Sensors/src/: Sensors.cpp  Sensors.h
catkin_ws/src/hardware/esp32_firmware/libraries/pid/: library.properties
catkin_ws/src/hardware/esp32_firmware/libraries/pid/src/: PID.cpp
catkin_ws/src/hardware/include/: .gitignore
catkin_ws/src/hardware/include/hardware/: .gitignore
catkin_ws/src/hardware/include/hardware/blink/: .gitignore  Blink.h
catkin_ws/src/hardware/include/hardware/encoders/: .gitignore  Encoders.cpp  Encoders.h
catkin_ws/src/hardware/include/hardware/motors/: .gitignore  Motors.cpp  Motors.h
catkin_ws/src/hardware/include/hardware/pid/: .gitignore  PID.cpp  PID.h
catkin_ws/src/hardware/include/hardware/pid2/: PID.cpp  PID.h
catkin_ws/src/hardware/include/hardware/sensors/: .gitignore  Sensors.cpp  Sensors.h
catkin_ws/src/hardware/launch/: .gitignore  hardware.launch  startup.launch
catkin_ws/src/hardware/params/: .gitignore  pid.yaml
catkin_ws/src/hardware/scripts/: .gitignore  robot_introspection_node.py  robot_status_node.py
catkin_ws/src/hardware/src/: .gitignore  laser_scan_node.cpp  light_sensors_node.cpp
catkin_ws/src/hardware/srv/: .gitignore  LightReadings.srv
catkin_ws/src/mobile_base/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/mobile_base/assets/: .gitignore
catkin_ws/src/mobile_base/assets/params/: .gitignore  movement_params.yaml  profile.yaml  profile_params.yaml
catkin_ws/src/mobile_base/assets/urdf/: .gitignore  minibot.urdf
catkin_ws/src/mobile_base/assets/visualization/: .gitignore  config_plot_profiles.xml
catkin_ws/src/mobile_base/include/: .gitignore
catkin_ws/src/mobile_base/include/mobile_base/: .gitignore  mobile_base_utils.h  profiles.h
catkin_ws/src/mobile_base/launch/: .gitignore  mobile_base.launch  start_minibot.launch
catkin_ws/src/mobile_base/src/: .gitignore  mobile_base_node.cpp  move_minibot_node.cpp  simple_move_node.cpp
catkin_ws/src/mobile_base/srv/: .gitignore  MoveMinibot.srv  OdomSetPoint.srv
catkin_ws/src/motion_planner/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/motion_planner/include/: .gitignore
catkin_ws/src/motion_planner/include/motion_planner/: .gitignore  motion_planner.h  motion_planner_utilities.h
catkin_ws/src/motion_planner/launch/: motion.launch  motion_planner.launch
catkin_ws/src/motion_planner/params/: .gitignore  motion_parameters.yaml
catkin_ws/src/motion_planner/src/: .gitignore  motion_planner_node.cpp
catkin_ws/src/motion_planner/srv/: .gitignore
catkin_ws/src/motion_planner/state_machines/: .gitignore  light_follower.h  sm_avoid_obstacles.h  sm_avoidance_destination.h  sm_destination.h  user_sm.h
catkin_ws/src/motion_planner/utilities/: .gitignore  structures.h
